--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@types/react-dom": "^16.8.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
     "typescript": "^3.4.2"
   },
   "scripts": {
